// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrugChartSlider Should render Drug Chart Slider for schedules with schedules fields 1`] = `
<div>
  <div
    class="side-bar-nav"
  >
    <div
      class="side-bar-header"
    >
      <div>
        Add to Drug Chart
      </div>
      <div
        class="close-icon"
      >
        <button
          class="bx--btn bx--btn--ghost bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
          tabindex="0"
          type="button"
        >
          <div
            class="bx--assistive-text"
          >
            Close
          </div>
          <svg
            aria-hidden="true"
            aria-label="Close"
            class="bx--btn__icon"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="side-bar-children"
    >
      <div
        style="padding: 20px 20px 120px 20px;"
      >
        <div
          class="bx--form-item bx--text-input-wrapper"
        >
          <label
            class="bx--label bx--label--disabled"
            for="drug-name"
          >
            Drug Name
          </label>
          <div
            class="bx--text-input__field-outer-wrapper"
          >
            <div
              class="bx--text-input__field-wrapper"
            >
              <input
                class="bx--text-input drug-name bx--text-input--md"
                disabled=""
                id="drug-name"
                type="text"
                value="Aspirin"
              />
            </div>
          </div>
        </div>
        <div
          class="inline-field"
        >
          <div
            class="dose-field-with-units"
          >
            <div
              class="-TaKcdG2c0NUzkYaFWOzlQ=="
            >
              <div
                class="bx--form-item"
              >
                <div
                  class="bx--number bx--number--helpertext"
                >
                  <label
                    class="bx--label bx--label--disabled"
                    for="Dropdown"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                        Dose 
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--number__input-wrapper"
                  >
                    <input
                      disabled=""
                      id="Dropdown"
                      pattern="[0-9]*"
                      step="1"
                      type="number"
                      value="10"
                    />
                    <div
                      class="bx--number__controls"
                    >
                      <button
                        aria-label="Decrement number"
                        class="bx--number__control-btn down-icon"
                        disabled=""
                        tabindex="-1"
                        title="Decrement number"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="down-icon"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 15H24V17H8z"
                          />
                        </svg>
                      </button>
                      <div
                        class="bx--number__rule-divider"
                      />
                      <button
                        aria-label="Increment number"
                        class="bx--number__control-btn up-icon"
                        disabled=""
                        tabindex="-1"
                        title="Increment number"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="up-icon"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                          />
                        </svg>
                      </button>
                      <div
                        class="bx--number__rule-divider"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="dropdown"
              data-testid="select dropdown"
              style="margin-right: 5px;"
            >
              <div
                class="bx--dropdown__wrapper bx--list-box__wrapper"
              >
                <label
                  class="bx--label bx--label--disabled"
                  for="downshift-68-toggle-button"
                  id="downshift-68-label"
                >
                  <div
                    class="titleText"
                  >
                    <span>
                        
                    </span>
                  </div>
                </label>
                <div
                  class="bx--dropdown bx--dropdown--disabled bx--list-box"
                  id="Dropdown"
                >
                  <button
                    aria-disabled="true"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-labelledby="downshift-68-label downshift-68-toggle-button"
                    class="bx--list-box__field"
                    disabled=""
                    id="downshift-68-toggle-button"
                    title="Tablet"
                    type="button"
                  >
                    <span
                      class="bx--list-box__label"
                    >
                      Tablet
                    </span>
                    <div
                      class="bx--list-box__menu-icon"
                    >
                      <svg
                        aria-label="Open menu"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        name="chevron--down"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                        <title>
                          Open menu
                        </title>
                      </svg>
                    </div>
                  </button>
                  <div
                    aria-labelledby="downshift-68-label"
                    class="bx--list-box__menu"
                    id="downshift-68-menu"
                    role="listbox"
                    tabindex="-1"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="route"
          >
            <div
              class="dropdown"
              data-testid="select dropdown"
              style="margin-right: 5px;"
            >
              <div
                class="bx--dropdown__wrapper bx--list-box__wrapper"
              >
                <label
                  class="bx--label bx--label--disabled"
                  for="downshift-69-toggle-button"
                  id="downshift-69-label"
                >
                  <div
                    class="titleText"
                  >
                    <span>
                      Route 
                    </span>
                  </div>
                </label>
                <div
                  class="bx--dropdown bx--dropdown--disabled bx--list-box"
                  id="Dropdown"
                >
                  <button
                    aria-disabled="true"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-labelledby="downshift-69-label downshift-69-toggle-button"
                    class="bx--list-box__field"
                    disabled=""
                    id="downshift-69-toggle-button"
                    type="button"
                  >
                    <span
                      class="bx--list-box__label"
                    />
                    <div
                      class="bx--list-box__menu-icon"
                    >
                      <svg
                        aria-label="Open menu"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        name="chevron--down"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                        <title>
                          Open menu
                        </title>
                      </svg>
                    </div>
                  </button>
                  <div
                    aria-labelledby="downshift-69-label"
                    class="bx--list-box__menu"
                    id="downshift-69-menu"
                    role="listbox"
                    tabindex="-1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="inline-field"
        >
          <div
            class="duration-field-with-units"
          >
            <div
              class="-TaKcdG2c0NUzkYaFWOzlQ=="
            >
              <div
                class="bx--form-item"
              >
                <div
                  class="bx--number bx--number--helpertext"
                >
                  <label
                    class="bx--label bx--label--disabled"
                    for="Dropdown"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                        Duration 
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--number__input-wrapper"
                  >
                    <input
                      disabled=""
                      id="Dropdown"
                      pattern="[0-9]*"
                      step="1"
                      type="number"
                      value="10"
                    />
                    <div
                      class="bx--number__controls"
                    >
                      <button
                        aria-label="Decrement number"
                        class="bx--number__control-btn down-icon"
                        disabled=""
                        tabindex="-1"
                        title="Decrement number"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="down-icon"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 15H24V17H8z"
                          />
                        </svg>
                      </button>
                      <div
                        class="bx--number__rule-divider"
                      />
                      <button
                        aria-label="Increment number"
                        class="bx--number__control-btn up-icon"
                        disabled=""
                        tabindex="-1"
                        title="Increment number"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="up-icon"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                          />
                        </svg>
                      </button>
                      <div
                        class="bx--number__rule-divider"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="dropdown"
              data-testid="select dropdown"
              style="margin-right: 5px;"
            >
              <div
                class="bx--dropdown__wrapper bx--list-box__wrapper"
              >
                <label
                  class="bx--label bx--label--disabled"
                  for="downshift-70-toggle-button"
                  id="downshift-70-label"
                >
                  <div
                    class="titleText"
                  >
                    <span>
                        
                    </span>
                  </div>
                </label>
                <div
                  class="bx--dropdown bx--dropdown--disabled bx--list-box"
                  id="Dropdown"
                >
                  <button
                    aria-disabled="true"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-labelledby="downshift-70-label downshift-70-toggle-button"
                    class="bx--list-box__field"
                    disabled=""
                    id="downshift-70-toggle-button"
                    type="button"
                  >
                    <span
                      class="bx--list-box__label"
                    />
                    <div
                      class="bx--list-box__menu-icon"
                    >
                      <svg
                        aria-label="Open menu"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        name="chevron--down"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                        <title>
                          Open menu
                        </title>
                      </svg>
                    </div>
                  </button>
                  <div
                    aria-labelledby="downshift-70-label"
                    class="bx--list-box__menu"
                    id="downshift-70-menu"
                    role="listbox"
                    tabindex="-1"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="date-picker-carbon"
            data-testid="datePicker"
          >
            <div
              class="bx--form-item"
            >
              <div
                class="bx--date-picker bx--date-picker--single"
                disabled=""
              >
                <div
                  class="bx--date-picker-container"
                >
                  <label
                    class="bx--label bx--label--disabled"
                    for="Dropdown"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                        Start Date 
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--date-picker-input__wrapper"
                  >
                    <input
                      autocomplete="off"
                      class="bx--date-picker__input bx--date-picker__input--md flatpickr-input"
                      disabled=""
                      id="Dropdown"
                      pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                      placeholder="DD MM YYYY"
                      style="width: 250px;"
                      type="text"
                    />
                    <svg
                      aria-hidden="true"
                      class="bx--date-picker__icon"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="frequency"
        >
          <div
            class="dropdown"
            data-testid="select dropdown"
            style="margin-right: 5px;"
          >
            <div
              class="bx--dropdown__wrapper bx--list-box__wrapper"
            >
              <label
                class="bx--label bx--label--disabled"
                for="downshift-71-toggle-button"
                id="downshift-71-label"
              >
                <div
                  class="titleText"
                >
                  <span>
                    Frequency 
                  </span>
                </div>
              </label>
              <div
                class="bx--dropdown bx--dropdown--disabled bx--list-box"
                id="DropdownFrequency"
              >
                <button
                  aria-disabled="true"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="downshift-71-label downshift-71-toggle-button"
                  class="bx--list-box__field"
                  disabled=""
                  id="downshift-71-toggle-button"
                  title="Twice a day"
                  type="button"
                >
                  <span
                    class="bx--list-box__label"
                  >
                    Twice a day
                  </span>
                  <div
                    class="bx--list-box__menu-icon"
                  >
                    <svg
                      aria-label="Open menu"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      name="chevron--down"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                      />
                      <title>
                        Open menu
                      </title>
                    </svg>
                  </div>
                </button>
                <div
                  aria-labelledby="downshift-71-label"
                  class="bx--list-box__menu"
                  id="downshift-71-menu"
                  role="listbox"
                  tabindex="-1"
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="schedule-section"
          >
            <div
              class="titleText"
            >
              <span>
                Schedule(s) (24 hrs format) 
              </span>
              <span
                class="required"
              >
                *
              </span>
            </div>
            <div
              class="inline-field"
              id="schedule"
            >
              <div
                class="schedule-time"
              >
                <div
                  class="bx--form-item"
                >
                  <label
                    class="bx--label"
                    for="time-selector"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                          
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--time-picker"
                  >
                    <div
                      class="bx--time-picker__input"
                    >
                      <input
                        autocomplete="off"
                        class="bx--time-picker__input-field bx--text-input"
                        id="time-selector"
                        maxlength="5"
                        pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                        placeholder="hh:mm"
                        style="width: 70%; padding: 0px 0px 0px 1rem;"
                        type="text"
                        value="8:00"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="schedule-time"
              >
                <div
                  class="bx--form-item"
                >
                  <label
                    class="bx--label"
                    for="time-selector"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                          
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--time-picker"
                  >
                    <div
                      class="bx--time-picker__input"
                    >
                      <input
                        autocomplete="off"
                        class="bx--time-picker__input-field bx--text-input"
                        id="time-selector"
                        maxlength="5"
                        pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                        placeholder="hh:mm"
                        style="width: 70%; padding: 0px 0px 0px 1rem;"
                        type="text"
                        value="16:00"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="instructions"
        >
          <div
            class="bx--form-item"
          >
            <div
              class="bx--text-area__label-wrapper"
            >
              <label
                class="bx--label bx--label--disabled"
              >
                Instruction
              </label>
            </div>
            <div
              class="bx--text-area__wrapper"
            >
              <textarea
                class="bx--text-area instruction"
                cols="50"
                disabled=""
                readonly=""
                rows="1"
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          class="additional-instructions"
        >
          <div
            class="bx--form-item"
          >
            <div
              class="bx--text-area__label-wrapper"
            >
              <label
                class="bx--label bx--label--disabled"
              >
                Additional Instruction
              </label>
            </div>
            <div
              class="bx--text-area__wrapper"
            >
              <textarea
                class="bx--text-area additional-instruction"
                cols="50"
                disabled=""
                readonly=""
                rows="1"
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          class="notes-sections"
        >
          <div
            class="bx--form-item"
          >
            <div
              class="bx--text-area__label-wrapper"
            >
              <label
                class="bx--label"
              >
                Notes
              </label>
            </div>
            <div
              class="bx--text-area__wrapper"
            >
              <textarea
                class="bx--text-area notes-section"
                cols="50"
                data-testid="notes-section"
                rows="3"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <button
          class="cancel-button-slider bx--btn bx--btn--secondary"
          data-testid="cancel"
          tabindex="0"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="save-button-slider bx--btn bx--btn--primary"
          tabindex="0"
          type="button"
        >
          Save
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DrugChartSlider Should render Drug Chart Slider for schedules with start, subsequent and remainder slots 1`] = `
<div>
  <div
    class="side-bar-nav"
  >
    <div
      class="side-bar-header"
    >
      <div>
        Add to Drug Chart
      </div>
      <div
        class="close-icon"
      >
        <button
          class="bx--btn bx--btn--ghost bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
          tabindex="0"
          type="button"
        >
          <div
            class="bx--assistive-text"
          >
            Close
          </div>
          <svg
            aria-hidden="true"
            aria-label="Close"
            class="bx--btn__icon"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="side-bar-children"
    >
      <div
        style="padding: 20px 20px 120px 20px;"
      >
        <div
          class="bx--form-item bx--text-input-wrapper"
        >
          <label
            class="bx--label bx--label--disabled"
            for="drug-name"
          >
            Drug Name
          </label>
          <div
            class="bx--text-input__field-outer-wrapper"
          >
            <div
              class="bx--text-input__field-wrapper"
            >
              <input
                class="bx--text-input drug-name bx--text-input--md"
                disabled=""
                id="drug-name"
                type="text"
                value="Aspirin"
              />
            </div>
          </div>
        </div>
        <div
          class="inline-field"
        >
          <div
            class="dose-field-with-units"
          >
            <div
              class="-TaKcdG2c0NUzkYaFWOzlQ=="
            >
              <div
                class="bx--form-item"
              >
                <div
                  class="bx--number bx--number--helpertext"
                >
                  <label
                    class="bx--label bx--label--disabled"
                    for="Dropdown"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                        Dose 
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--number__input-wrapper"
                  >
                    <input
                      disabled=""
                      id="Dropdown"
                      pattern="[0-9]*"
                      step="1"
                      type="number"
                      value="10"
                    />
                    <div
                      class="bx--number__controls"
                    >
                      <button
                        aria-label="Decrement number"
                        class="bx--number__control-btn down-icon"
                        disabled=""
                        tabindex="-1"
                        title="Decrement number"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="down-icon"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 15H24V17H8z"
                          />
                        </svg>
                      </button>
                      <div
                        class="bx--number__rule-divider"
                      />
                      <button
                        aria-label="Increment number"
                        class="bx--number__control-btn up-icon"
                        disabled=""
                        tabindex="-1"
                        title="Increment number"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="up-icon"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                          />
                        </svg>
                      </button>
                      <div
                        class="bx--number__rule-divider"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="dropdown"
              data-testid="select dropdown"
              style="margin-right: 5px;"
            >
              <div
                class="bx--dropdown__wrapper bx--list-box__wrapper"
              >
                <label
                  class="bx--label bx--label--disabled"
                  for="downshift-64-toggle-button"
                  id="downshift-64-label"
                >
                  <div
                    class="titleText"
                  >
                    <span>
                        
                    </span>
                  </div>
                </label>
                <div
                  class="bx--dropdown bx--dropdown--disabled bx--list-box"
                  id="Dropdown"
                >
                  <button
                    aria-disabled="true"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-labelledby="downshift-64-label downshift-64-toggle-button"
                    class="bx--list-box__field"
                    disabled=""
                    id="downshift-64-toggle-button"
                    title="Tablet"
                    type="button"
                  >
                    <span
                      class="bx--list-box__label"
                    >
                      Tablet
                    </span>
                    <div
                      class="bx--list-box__menu-icon"
                    >
                      <svg
                        aria-label="Open menu"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        name="chevron--down"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                        <title>
                          Open menu
                        </title>
                      </svg>
                    </div>
                  </button>
                  <div
                    aria-labelledby="downshift-64-label"
                    class="bx--list-box__menu"
                    id="downshift-64-menu"
                    role="listbox"
                    tabindex="-1"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="route"
          >
            <div
              class="dropdown"
              data-testid="select dropdown"
              style="margin-right: 5px;"
            >
              <div
                class="bx--dropdown__wrapper bx--list-box__wrapper"
              >
                <label
                  class="bx--label bx--label--disabled"
                  for="downshift-65-toggle-button"
                  id="downshift-65-label"
                >
                  <div
                    class="titleText"
                  >
                    <span>
                      Route 
                    </span>
                  </div>
                </label>
                <div
                  class="bx--dropdown bx--dropdown--disabled bx--list-box"
                  id="Dropdown"
                >
                  <button
                    aria-disabled="true"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-labelledby="downshift-65-label downshift-65-toggle-button"
                    class="bx--list-box__field"
                    disabled=""
                    id="downshift-65-toggle-button"
                    type="button"
                  >
                    <span
                      class="bx--list-box__label"
                    />
                    <div
                      class="bx--list-box__menu-icon"
                    >
                      <svg
                        aria-label="Open menu"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        name="chevron--down"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                        <title>
                          Open menu
                        </title>
                      </svg>
                    </div>
                  </button>
                  <div
                    aria-labelledby="downshift-65-label"
                    class="bx--list-box__menu"
                    id="downshift-65-menu"
                    role="listbox"
                    tabindex="-1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="inline-field"
        >
          <div
            class="duration-field-with-units"
          >
            <div
              class="-TaKcdG2c0NUzkYaFWOzlQ=="
            >
              <div
                class="bx--form-item"
              >
                <div
                  class="bx--number bx--number--helpertext"
                >
                  <label
                    class="bx--label bx--label--disabled"
                    for="Dropdown"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                        Duration 
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--number__input-wrapper"
                  >
                    <input
                      disabled=""
                      id="Dropdown"
                      pattern="[0-9]*"
                      step="1"
                      type="number"
                      value="10"
                    />
                    <div
                      class="bx--number__controls"
                    >
                      <button
                        aria-label="Decrement number"
                        class="bx--number__control-btn down-icon"
                        disabled=""
                        tabindex="-1"
                        title="Decrement number"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="down-icon"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 15H24V17H8z"
                          />
                        </svg>
                      </button>
                      <div
                        class="bx--number__rule-divider"
                      />
                      <button
                        aria-label="Increment number"
                        class="bx--number__control-btn up-icon"
                        disabled=""
                        tabindex="-1"
                        title="Increment number"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="up-icon"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                          />
                        </svg>
                      </button>
                      <div
                        class="bx--number__rule-divider"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="dropdown"
              data-testid="select dropdown"
              style="margin-right: 5px;"
            >
              <div
                class="bx--dropdown__wrapper bx--list-box__wrapper"
              >
                <label
                  class="bx--label bx--label--disabled"
                  for="downshift-66-toggle-button"
                  id="downshift-66-label"
                >
                  <div
                    class="titleText"
                  >
                    <span>
                        
                    </span>
                  </div>
                </label>
                <div
                  class="bx--dropdown bx--dropdown--disabled bx--list-box"
                  id="Dropdown"
                >
                  <button
                    aria-disabled="true"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-labelledby="downshift-66-label downshift-66-toggle-button"
                    class="bx--list-box__field"
                    disabled=""
                    id="downshift-66-toggle-button"
                    type="button"
                  >
                    <span
                      class="bx--list-box__label"
                    />
                    <div
                      class="bx--list-box__menu-icon"
                    >
                      <svg
                        aria-label="Open menu"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        name="chevron--down"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                        <title>
                          Open menu
                        </title>
                      </svg>
                    </div>
                  </button>
                  <div
                    aria-labelledby="downshift-66-label"
                    class="bx--list-box__menu"
                    id="downshift-66-menu"
                    role="listbox"
                    tabindex="-1"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="date-picker-carbon"
            data-testid="datePicker"
          >
            <div
              class="bx--form-item"
            >
              <div
                class="bx--date-picker bx--date-picker--single"
                disabled=""
              >
                <div
                  class="bx--date-picker-container"
                >
                  <label
                    class="bx--label bx--label--disabled"
                    for="Dropdown"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                        Start Date 
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--date-picker-input__wrapper"
                  >
                    <input
                      autocomplete="off"
                      class="bx--date-picker__input bx--date-picker__input--md flatpickr-input"
                      disabled=""
                      id="Dropdown"
                      pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                      placeholder="DD MM YYYY"
                      style="width: 250px;"
                      type="text"
                    />
                    <svg
                      aria-hidden="true"
                      class="bx--date-picker__icon"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="frequency"
        >
          <div
            class="dropdown"
            data-testid="select dropdown"
            style="margin-right: 5px;"
          >
            <div
              class="bx--dropdown__wrapper bx--list-box__wrapper"
            >
              <label
                class="bx--label bx--label--disabled"
                for="downshift-67-toggle-button"
                id="downshift-67-label"
              >
                <div
                  class="titleText"
                >
                  <span>
                    Frequency 
                  </span>
                </div>
              </label>
              <div
                class="bx--dropdown bx--dropdown--disabled bx--list-box"
                id="DropdownFrequency"
              >
                <button
                  aria-disabled="true"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="downshift-67-label downshift-67-toggle-button"
                  class="bx--list-box__field"
                  disabled=""
                  id="downshift-67-toggle-button"
                  title="Twice a day"
                  type="button"
                >
                  <span
                    class="bx--list-box__label"
                  >
                    Twice a day
                  </span>
                  <div
                    class="bx--list-box__menu-icon"
                  >
                    <svg
                      aria-label="Open menu"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      name="chevron--down"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                      />
                      <title>
                        Open menu
                      </title>
                    </svg>
                  </div>
                </button>
                <div
                  aria-labelledby="downshift-67-label"
                  class="bx--list-box__menu"
                  id="downshift-67-menu"
                  role="listbox"
                  tabindex="-1"
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="schedule-section"
          >
            <div
              class="titleText"
            >
              <span>
                Schedule time (start date, 24 hrs format) 
              </span>
              <span
                class="required"
              >
                *
              </span>
            </div>
            <div
              class="inline-field"
              id="schedule"
            >
              <div
                class="schedule-time"
              >
                <div
                  class="bx--form-item"
                >
                  <label
                    class="bx--label bx--label--disabled"
                    for="time-selector"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                          
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--time-picker"
                  >
                    <div
                      class="bx--time-picker__input"
                    >
                      <input
                        autocomplete="off"
                        class="bx--time-picker__input-field bx--text-input"
                        disabled=""
                        id="time-selector"
                        maxlength="5"
                        pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                        placeholder="hh:mm"
                        style="width: 70%; padding: 0px 0px 0px 1rem;"
                        type="text"
                        value="hh:mm"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="schedule-time"
              >
                <div
                  class="bx--form-item"
                >
                  <label
                    class="bx--label"
                    for="time-selector"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                          
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--time-picker"
                  >
                    <div
                      class="bx--time-picker__input"
                    >
                      <input
                        autocomplete="off"
                        class="bx--time-picker__input-field bx--text-input"
                        id="time-selector"
                        maxlength="5"
                        pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                        placeholder="hh:mm"
                        style="width: 70%; padding: 0px 0px 0px 1rem;"
                        type="text"
                        value="16:00"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="schedule-section"
          >
            <div
              class="titleText"
            >
              <span>
                Schedule time (subsequent, 24 hrs format) 
              </span>
              <span
                class="required"
              >
                *
              </span>
            </div>
            <div
              class="inline-field"
              id="schedule"
            >
              <div
                class="schedule-time"
              >
                <div
                  class="bx--form-item"
                >
                  <label
                    class="bx--label"
                    for="time-selector"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                          
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--time-picker"
                  >
                    <div
                      class="bx--time-picker__input"
                    >
                      <input
                        autocomplete="off"
                        class="bx--time-picker__input-field bx--text-input"
                        id="time-selector"
                        maxlength="5"
                        pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                        placeholder="hh:mm"
                        style="width: 70%; padding: 0px 0px 0px 1rem;"
                        type="text"
                        value="8:00"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="schedule-time"
              >
                <div
                  class="bx--form-item"
                >
                  <label
                    class="bx--label"
                    for="time-selector"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                          
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--time-picker"
                  >
                    <div
                      class="bx--time-picker__input"
                    >
                      <input
                        autocomplete="off"
                        class="bx--time-picker__input-field bx--text-input"
                        id="time-selector"
                        maxlength="5"
                        pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                        placeholder="hh:mm"
                        style="width: 70%; padding: 0px 0px 0px 1rem;"
                        type="text"
                        value="16:00"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="schedule-section"
          >
            <div
              class="titleText"
            >
              <span>
                Schedule time (remainder, 24 hrs format) 
              </span>
              <span
                class="required"
              >
                *
              </span>
            </div>
            <div
              class="inline-field"
              id="schedule"
            >
              <div
                class="schedule-time"
              >
                <div
                  class="bx--form-item"
                >
                  <label
                    class="bx--label"
                    for="time-selector"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                          
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--time-picker"
                  >
                    <div
                      class="bx--time-picker__input"
                    >
                      <input
                        autocomplete="off"
                        class="bx--time-picker__input-field bx--text-input"
                        id="time-selector"
                        maxlength="5"
                        pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                        placeholder="hh:mm"
                        style="width: 70%; padding: 0px 0px 0px 1rem;"
                        type="text"
                        value="8:00"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="instructions"
        >
          <div
            class="bx--form-item"
          >
            <div
              class="bx--text-area__label-wrapper"
            >
              <label
                class="bx--label bx--label--disabled"
              >
                Instruction
              </label>
            </div>
            <div
              class="bx--text-area__wrapper"
            >
              <textarea
                class="bx--text-area instruction"
                cols="50"
                disabled=""
                readonly=""
                rows="1"
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          class="additional-instructions"
        >
          <div
            class="bx--form-item"
          >
            <div
              class="bx--text-area__label-wrapper"
            >
              <label
                class="bx--label bx--label--disabled"
              >
                Additional Instruction
              </label>
            </div>
            <div
              class="bx--text-area__wrapper"
            >
              <textarea
                class="bx--text-area additional-instruction"
                cols="50"
                disabled=""
                readonly=""
                rows="1"
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          class="notes-sections"
        >
          <div
            class="bx--form-item"
          >
            <div
              class="bx--text-area__label-wrapper"
            >
              <label
                class="bx--label"
              >
                Notes
              </label>
            </div>
            <div
              class="bx--text-area__wrapper"
            >
              <textarea
                class="bx--text-area notes-section"
                cols="50"
                data-testid="notes-section"
                rows="3"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <button
          class="cancel-button-slider bx--btn bx--btn--secondary"
          data-testid="cancel"
          tabindex="0"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="save-button-slider bx--btn bx--btn--primary"
          tabindex="0"
          type="button"
        >
          Save
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DrugChartSlider should render with previous time on click of edit drug chart link 1`] = `
<div>
  <div
    class="side-bar-nav"
  >
    <div
      class="side-bar-header"
    >
      <div>
        Edit Drug Chart
      </div>
      <div
        class="close-icon"
      >
        <button
          class="bx--btn bx--btn--ghost bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
          tabindex="0"
          type="button"
        >
          <div
            class="bx--assistive-text"
          >
            Close
          </div>
          <svg
            aria-hidden="true"
            aria-label="Close"
            class="bx--btn__icon"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="side-bar-children"
    >
      <div
        style="padding: 20px 20px 120px 20px;"
      >
        <div
          class="bx--form-item bx--text-input-wrapper"
        >
          <label
            class="bx--label bx--label--disabled"
            for="drug-name"
          >
            Drug Name
          </label>
          <div
            class="bx--text-input__field-outer-wrapper"
          >
            <div
              class="bx--text-input__field-wrapper"
            >
              <input
                class="bx--text-input drug-name bx--text-input--md"
                disabled=""
                id="drug-name"
                type="text"
                value="Aspirin"
              />
            </div>
          </div>
        </div>
        <div
          class="inline-field"
        >
          <div
            class="dose-field-with-units"
          >
            <div
              class="-TaKcdG2c0NUzkYaFWOzlQ=="
            >
              <div
                class="bx--form-item"
              >
                <div
                  class="bx--number bx--number--helpertext"
                >
                  <label
                    class="bx--label bx--label--disabled"
                    for="Dropdown"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                        Dose 
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--number__input-wrapper"
                  >
                    <input
                      disabled=""
                      id="Dropdown"
                      pattern="[0-9]*"
                      step="1"
                      type="number"
                      value="10"
                    />
                    <div
                      class="bx--number__controls"
                    >
                      <button
                        aria-label="Decrement number"
                        class="bx--number__control-btn down-icon"
                        disabled=""
                        tabindex="-1"
                        title="Decrement number"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="down-icon"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 15H24V17H8z"
                          />
                        </svg>
                      </button>
                      <div
                        class="bx--number__rule-divider"
                      />
                      <button
                        aria-label="Increment number"
                        class="bx--number__control-btn up-icon"
                        disabled=""
                        tabindex="-1"
                        title="Increment number"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="up-icon"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                          />
                        </svg>
                      </button>
                      <div
                        class="bx--number__rule-divider"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="dropdown"
              data-testid="select dropdown"
              style="margin-right: 5px;"
            >
              <div
                class="bx--dropdown__wrapper bx--list-box__wrapper"
              >
                <label
                  class="bx--label bx--label--disabled"
                  for="downshift-92-toggle-button"
                  id="downshift-92-label"
                >
                  <div
                    class="titleText"
                  >
                    <span>
                        
                    </span>
                  </div>
                </label>
                <div
                  class="bx--dropdown bx--dropdown--disabled bx--list-box"
                  id="Dropdown"
                >
                  <button
                    aria-disabled="true"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-labelledby="downshift-92-label downshift-92-toggle-button"
                    class="bx--list-box__field"
                    disabled=""
                    id="downshift-92-toggle-button"
                    title="Tablet"
                    type="button"
                  >
                    <span
                      class="bx--list-box__label"
                    >
                      Tablet
                    </span>
                    <div
                      class="bx--list-box__menu-icon"
                    >
                      <svg
                        aria-label="Open menu"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        name="chevron--down"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                        <title>
                          Open menu
                        </title>
                      </svg>
                    </div>
                  </button>
                  <div
                    aria-labelledby="downshift-92-label"
                    class="bx--list-box__menu"
                    id="downshift-92-menu"
                    role="listbox"
                    tabindex="-1"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="route"
          >
            <div
              class="dropdown"
              data-testid="select dropdown"
              style="margin-right: 5px;"
            >
              <div
                class="bx--dropdown__wrapper bx--list-box__wrapper"
              >
                <label
                  class="bx--label bx--label--disabled"
                  for="downshift-93-toggle-button"
                  id="downshift-93-label"
                >
                  <div
                    class="titleText"
                  >
                    <span>
                      Route 
                    </span>
                  </div>
                </label>
                <div
                  class="bx--dropdown bx--dropdown--disabled bx--list-box"
                  id="Dropdown"
                >
                  <button
                    aria-disabled="true"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-labelledby="downshift-93-label downshift-93-toggle-button"
                    class="bx--list-box__field"
                    disabled=""
                    id="downshift-93-toggle-button"
                    type="button"
                  >
                    <span
                      class="bx--list-box__label"
                    />
                    <div
                      class="bx--list-box__menu-icon"
                    >
                      <svg
                        aria-label="Open menu"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        name="chevron--down"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                        <title>
                          Open menu
                        </title>
                      </svg>
                    </div>
                  </button>
                  <div
                    aria-labelledby="downshift-93-label"
                    class="bx--list-box__menu"
                    id="downshift-93-menu"
                    role="listbox"
                    tabindex="-1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="inline-field"
        >
          <div
            class="duration-field-with-units"
          >
            <div
              class="-TaKcdG2c0NUzkYaFWOzlQ=="
            >
              <div
                class="bx--form-item"
              >
                <div
                  class="bx--number bx--number--helpertext"
                >
                  <label
                    class="bx--label bx--label--disabled"
                    for="Dropdown"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                        Duration 
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--number__input-wrapper"
                  >
                    <input
                      disabled=""
                      id="Dropdown"
                      pattern="[0-9]*"
                      step="1"
                      type="number"
                      value="10"
                    />
                    <div
                      class="bx--number__controls"
                    >
                      <button
                        aria-label="Decrement number"
                        class="bx--number__control-btn down-icon"
                        disabled=""
                        tabindex="-1"
                        title="Decrement number"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="down-icon"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 15H24V17H8z"
                          />
                        </svg>
                      </button>
                      <div
                        class="bx--number__rule-divider"
                      />
                      <button
                        aria-label="Increment number"
                        class="bx--number__control-btn up-icon"
                        disabled=""
                        tabindex="-1"
                        title="Increment number"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="up-icon"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                          />
                        </svg>
                      </button>
                      <div
                        class="bx--number__rule-divider"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="dropdown"
              data-testid="select dropdown"
              style="margin-right: 5px;"
            >
              <div
                class="bx--dropdown__wrapper bx--list-box__wrapper"
              >
                <label
                  class="bx--label bx--label--disabled"
                  for="downshift-94-toggle-button"
                  id="downshift-94-label"
                >
                  <div
                    class="titleText"
                  >
                    <span>
                        
                    </span>
                  </div>
                </label>
                <div
                  class="bx--dropdown bx--dropdown--disabled bx--list-box"
                  id="Dropdown"
                >
                  <button
                    aria-disabled="true"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-labelledby="downshift-94-label downshift-94-toggle-button"
                    class="bx--list-box__field"
                    disabled=""
                    id="downshift-94-toggle-button"
                    type="button"
                  >
                    <span
                      class="bx--list-box__label"
                    />
                    <div
                      class="bx--list-box__menu-icon"
                    >
                      <svg
                        aria-label="Open menu"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        name="chevron--down"
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                        <title>
                          Open menu
                        </title>
                      </svg>
                    </div>
                  </button>
                  <div
                    aria-labelledby="downshift-94-label"
                    class="bx--list-box__menu"
                    id="downshift-94-menu"
                    role="listbox"
                    tabindex="-1"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="date-picker-carbon"
            data-testid="datePicker"
          >
            <div
              class="bx--form-item"
            >
              <div
                class="bx--date-picker bx--date-picker--single"
                disabled=""
              >
                <div
                  class="bx--date-picker-container"
                >
                  <label
                    class="bx--label bx--label--disabled"
                    for="Dropdown"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                        Start Date 
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--date-picker-input__wrapper"
                  >
                    <input
                      autocomplete="off"
                      class="bx--date-picker__input bx--date-picker__input--md flatpickr-input"
                      disabled=""
                      id="Dropdown"
                      pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                      placeholder="DD MM YYYY"
                      style="width: 250px;"
                      type="text"
                    />
                    <svg
                      aria-hidden="true"
                      class="bx--date-picker__icon"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="frequency"
        >
          <div
            class="dropdown"
            data-testid="select dropdown"
            style="margin-right: 5px;"
          >
            <div
              class="bx--dropdown__wrapper bx--list-box__wrapper"
            >
              <label
                class="bx--label bx--label--disabled"
                for="downshift-95-toggle-button"
                id="downshift-95-label"
              >
                <div
                  class="titleText"
                >
                  <span>
                    Frequency 
                  </span>
                </div>
              </label>
              <div
                class="bx--dropdown bx--dropdown--disabled bx--list-box"
                id="DropdownFrequency"
              >
                <button
                  aria-disabled="true"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="downshift-95-label downshift-95-toggle-button"
                  class="bx--list-box__field"
                  disabled=""
                  id="downshift-95-toggle-button"
                  title="Twice a day"
                  type="button"
                >
                  <span
                    class="bx--list-box__label"
                  >
                    Twice a day
                  </span>
                  <div
                    class="bx--list-box__menu-icon"
                  >
                    <svg
                      aria-label="Open menu"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      name="chevron--down"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                      />
                      <title>
                        Open menu
                      </title>
                    </svg>
                  </div>
                </button>
                <div
                  aria-labelledby="downshift-95-label"
                  class="bx--list-box__menu"
                  id="downshift-95-menu"
                  role="listbox"
                  tabindex="-1"
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="schedule-section"
          >
            <div
              class="titleText"
            >
              <span>
                Schedule time (start date, 24 hrs format) 
              </span>
              <span
                class="required"
              >
                *
              </span>
            </div>
            <div
              class="inline-field"
              id="schedule"
            >
              <div
                class="schedule-time"
              >
                <div
                  class="bx--form-item"
                >
                  <label
                    class="bx--label bx--label--disabled"
                    for="time-selector"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                          
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--time-picker"
                  >
                    <div
                      class="bx--time-picker__input"
                    >
                      <input
                        autocomplete="off"
                        class="bx--time-picker__input-field bx--text-input"
                        disabled=""
                        id="time-selector"
                        maxlength="5"
                        pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                        placeholder="hh:mm"
                        style="width: 70%; padding: 0px 0px 0px 1rem;"
                        type="text"
                        value="hh:mm"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="schedule-time"
              >
                <div
                  class="bx--form-item"
                >
                  <label
                    class="bx--label"
                    for="time-selector"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                          
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--time-picker"
                  >
                    <div
                      class="bx--time-picker__input"
                    >
                      <input
                        autocomplete="off"
                        class="bx--time-picker__input-field bx--text-input"
                        id="time-selector"
                        maxlength="5"
                        pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                        placeholder="hh:mm"
                        style="width: 70%; padding: 0px 0px 0px 1rem;"
                        type="text"
                        value="03:00"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="schedule-section"
          >
            <div
              class="titleText"
            >
              <span>
                Schedule time (subsequent, 24 hrs format) 
              </span>
              <span
                class="required"
              >
                *
              </span>
            </div>
            <div
              class="inline-field"
              id="schedule"
            >
              <div
                class="schedule-time"
              >
                <div
                  class="bx--form-item"
                >
                  <label
                    class="bx--label"
                    for="time-selector"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                          
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--time-picker"
                  >
                    <div
                      class="bx--time-picker__input"
                    >
                      <input
                        autocomplete="off"
                        class="bx--time-picker__input-field bx--text-input"
                        id="time-selector"
                        maxlength="5"
                        pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                        placeholder="hh:mm"
                        style="width: 70%; padding: 0px 0px 0px 1rem;"
                        type="text"
                        value="03:00"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="schedule-time"
              >
                <div
                  class="bx--form-item"
                >
                  <label
                    class="bx--label"
                    for="time-selector"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                          
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--time-picker"
                  >
                    <div
                      class="bx--time-picker__input"
                    >
                      <input
                        autocomplete="off"
                        class="bx--time-picker__input-field bx--text-input"
                        id="time-selector"
                        maxlength="5"
                        pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                        placeholder="hh:mm"
                        style="width: 70%; padding: 0px 0px 0px 1rem;"
                        type="text"
                        value="10:30"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="schedule-section"
          >
            <div
              class="titleText"
            >
              <span>
                Schedule time (remainder, 24 hrs format) 
              </span>
              <span
                class="required"
              >
                *
              </span>
            </div>
            <div
              class="inline-field"
              id="schedule"
            >
              <div
                class="schedule-time"
              >
                <div
                  class="bx--form-item"
                >
                  <label
                    class="bx--label"
                    for="time-selector"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                          
                      </span>
                    </div>
                  </label>
                  <div
                    class="bx--time-picker"
                  >
                    <div
                      class="bx--time-picker__input"
                    >
                      <input
                        autocomplete="off"
                        class="bx--time-picker__input-field bx--text-input"
                        id="time-selector"
                        maxlength="5"
                        pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                        placeholder="hh:mm"
                        style="width: 70%; padding: 0px 0px 0px 1rem;"
                        type="text"
                        value="03:00"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="instructions"
        >
          <div
            class="bx--form-item"
          >
            <div
              class="bx--text-area__label-wrapper"
            >
              <label
                class="bx--label bx--label--disabled"
              >
                Instruction
              </label>
            </div>
            <div
              class="bx--text-area__wrapper"
            >
              <textarea
                class="bx--text-area instruction"
                cols="50"
                disabled=""
                readonly=""
                rows="1"
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          class="additional-instructions"
        >
          <div
            class="bx--form-item"
          >
            <div
              class="bx--text-area__label-wrapper"
            >
              <label
                class="bx--label bx--label--disabled"
              >
                Additional Instruction
              </label>
            </div>
            <div
              class="bx--text-area__wrapper"
            >
              <textarea
                class="bx--text-area additional-instruction"
                cols="50"
                disabled=""
                readonly=""
                rows="1"
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          class="notes-sections"
        >
          <div
            class="bx--form-item"
          >
            <div
              class="bx--text-area__label-wrapper"
            >
              <label
                class="bx--label"
              >
                Notes
              </label>
            </div>
            <div
              class="bx--text-area__wrapper"
            >
              <textarea
                class="bx--text-area notes-section"
                cols="50"
                data-testid="notes-section"
                rows="3"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <button
          class="cancel-button-slider bx--btn bx--btn--secondary"
          data-testid="cancel"
          tabindex="0"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="save-button-slider bx--btn bx--btn--primary"
          tabindex="0"
          type="button"
        >
          Save
        </button>
      </div>
    </div>
  </div>
</div>
`;
